car cards and services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,107 @@
 <nav class="navbar navbar-expand-lg navbar-secondary">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img id="logoSize" src="https://www.zoomcar.com/blog/wp-content/uploads/2020/03/footer-logo.png" alt=""
-          class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <a class="navbar-brand" href="index.html">
+            <img id="logoSize" src="https://www.zoomcar.com/blog/wp-content/uploads/2020/03/footer-logo.png" alt=""
+                class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 
-        </ul>
-        <form class="d-flex">
-          <button class="btn btn-outline-primary round-button mx-2" type="button">Login</button>
-          <button class="btn btn-success round-button" (click)="openRegister()" type="button">Register</button>
-        </form>
-      </div>
+            </ul>
+            <form class="d-flex" *ngIf="loggedUserObj">
+                <button class="btn btn-outline-primary round-button mx-2" type="button">{{loggedUserObj.name}}</button>
+                <button class="btn btn-success round-button" (click)="logoff()" type="button">Log Off</button>
+            </form>
+            <form class="d-flex" *ngIf="!loggedUserObj">
+                <button class="btn btn-outline-primary round-button mx-2" (click)="openLogin()"
+                    type="button">Login</button>
+                <button class="btn btn-success round-button" (click)="openRegister()" type="button">Register</button>
+            </form>
+        </div>
     </div>
-  </nav>
-  <div class="container-fluid pt-3">
+</nav>
+<div class="container-fluid pt-3">
     <router-outlet></router-outlet>
-  </div>
+</div>
 
-  <div id="registerModal" class="modal">
+<div id="registerModal" class="modal">
     <div class="modal-dialog">
-         <div class="modal-content">
-        <div class="modal-header">
-           <h4 class="modal-title">Register</h4>
-          <button type="button" class="btn-close" (click)="closeRegister()" data-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-12">
-                <label for="" >Name</label>
-                <input type="text" [(ngModel)]="registerObj.name" class="form-control">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Register</h4>
+                <button type="button" class="btn-close" (click)="closeRegister()" data-dismiss="modal"></button>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <label for="" >Email</label>
-                    <input type="email" [(ngModel)]="registerObj.emailId" class="form-control">
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-12">
+                        <label for="">Name</label>
+                        <input type="text" [(ngModel)]="registerObj.name" class="form-control">
+                    </div>
                 </div>
-                <div class="col-6">
-                    <label for="" >Phone number</label>
-                    <input type="number" [(ngModel)]="registerObj.mobileNo" class="form-control">
+                <div class="row">
+                    <div class="col-6">
+                        <label for="">Email</label>
+                        <input type="email" [(ngModel)]="registerObj.emailId" class="form-control">
+                    </div>
+                    <div class="col-6">
+                        <label for="">Phone number</label>
+                        <input type="number" [(ngModel)]="registerObj.mobileNo" class="form-control">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="">Who Are You </label>
+                        <select name="" [(ngModel)]="registerObj.userRole" class="form-control">
+                            <option value="">Select Your Role</option>
+                            <option value="Customer">Customer</option>
+                            <option value="Customer">CarOwner</option>
+                        </select>
+                    </div>
+                    <div class="col-6">
+                        <label for="">Password</label>
+                        <input type="password" [(ngModel)]="registerObj.password" class="form-control">
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" (click)="closeRegister()" class="btn btn-danger"
+                    data-bs-dismiss="modal">Close</button>
+                <button type="button" (click)="onRegister()" class="btn btn-danger">Register</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="loginModal" class="modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Register</h4>
+                <button type="button" class="btn-close" (click)="closeLogin()" data-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-6">
+                        <label for="">Email</label>
+                        <input type="email" [(ngModel)]="loginObj.emailId" class="form-control">
+                    </div>
+                    <div class="col-6">
+                        <label for="">Password</label>
+                        <input type="password" [(ngModel)]="loginObj.password" class="form-control">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <label for="" >Who Are You </label>
-                    <select name="" id="" [(ngModel)]="registerObj.userRole" class="form-control">
-                    <option value="">Select Your Role</option>
-                    <option value="Customer">Customer</option>
-                    <option value="Customer">Customer</option>
-                </select> 
-                </div>
-                <div class="col-6">
-                    <label for="" >Password</label>
-                    <input type="password" [(ngModel)]="registerObj.password" class="form-control">
-                </div>
+            <div class="modal-footer">
+                <button type="button" (click)="closeLogin()" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button type="button" (click)="onLogin()" class="btn btn-danger">Login</button>
             </div>
-          </div>
         </div>
-        <div class="modal-footer">
-          <button type="button"  (click)="closeRegister()" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-     </div>
-  </div>
+    </div>
+</div>
